--- a/web/web.gradle
+++ b/web/web.gradle
@@ -2,6 +2,9 @@ apply plugin: 'application'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 mainClassName = 'io.github.fdayamani.hearts.web.HeartsWeb'
+repositories {
+    mavenCentral()
+}
 
 dependencies {
     compile libs.guava
@@ -32,6 +35,12 @@ artifacts {
 }
 
 buildscript {
+    repositories {
+        maven{
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+
     dependencies {
         classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.3'
     }
