Simplify gradle repository configuration

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 defaultTasks 'clean', 'build'
 
-repositories {
-    mavenCentral()
+allprojects {
+    repositories {
+        mavenCentral()
+    }
 }
 
 subprojects {
