added jbehave dependency

--- a/gradle/libraries.gradle
+++ b/gradle/libraries.gradle
@@ -2,7 +2,7 @@ ext {
     assertJVersion = '3.3.0'
     guavaVersion = '19.0'
     htmlUnitVersion = '2.21'
-    jbehaveVersion = '3.9.5'
+    jbehaveVersion = '4.0.5'
     junitVersion = '4.12'
     mockitoVersion = '1.10.19'
     seleniumVersion = '2.48.2'
@@ -17,6 +17,8 @@ ext {
         // Testing libs
         assertJ:            "org.assertj:assertj-core:$assertJVersion",
         htmlUnit:           "net.sourceforge.htmlunit:htmlunit:$htmlUnitVersion",
+        jbehave:            "org.jbehave:jbehave-core:$jbehaveVersion",
+        jbehaveResources:   "org.jbehave.site:jbehave-site-resources:3.3@zip",
         junit:              "junit:junit:$junitVersion",
         mockito:            "org.mockito:mockito-core:$mockitoVersion"
     ]
