--- a/specifications/specifications.gradle
+++ b/specifications/specifications.gradle
@@ -6,6 +6,7 @@ dependencies {
     compile project(':hearts-web')
     compile libs.jbehave
 
+    testCompile libs.assertJ
     testCompile libs.junit
     testCompile libs.mockito
 
