--- a/specifications/specifications.gradle
+++ b/specifications/specifications.gradle
@@ -7,6 +7,7 @@ dependencies {
     compile libs.jbehave
 
     testCompile libs.assertJ
+    testCompile libs.htmlUnit
     testCompile libs.junit
     testCompile libs.mockito
 
