--- a/gradle/libraries.gradle
+++ b/gradle/libraries.gradle
@@ -1,6 +1,6 @@
 ext {
     assertJVersion = '3.3.0'
-    guavaVersion = '19.0'
+    guavaVersion = '28.1-jre'
     htmlUnitVersion = '2.21'
     jbehaveVersion = '4.0.5'
     junitVersion = '4.12'
